# CELLOTRONICUM

./: .gitignore  CMakeLists.txt  README.md  buduj.bat  buduj.sh  last_session.cello  scpath.txt
cmake_modules/: FindSDL2.cmake
cpp/: CMakeLists.txt  colors.h  controllers.cpp  controllers.h  drawables.cpp  drawables.h  effectgui.cpp  effectgui.h  effects.cpp  effects.h  effectsdef.cpp  effectsdef.h  graphics.cpp  graphics.h  main.cpp  osc.cpp  osc.h
